[package]
name = "sinfonia_server"
version = "0.1.0"
authors = ["Fabian Schlager <fabian.schlager@skyr.at>"]

[dependencies]
log = "0.3.9"
env_logger = "0.5.13"
serde = "1.0.36"
serde_json = "1.0.13"
serde_derive = "1.0.36"
rand = "0.5.0-pre.0"
gotham = "0.2.1"
hyper = "0.11"
futures = "0.1"
gotham_serde_json_body_parser = "0.2.0"
unicase = "2.0"
structopt = "0.2.7"
failure = "0.1.1"
alto = "3.0.3"
#sndfile-sys = "*"
sndfile-sys = { path = "../sndfile-sys" }
minimp3 = "0.3"
walkdir = "2"
rusqlite = { version = "0.20.0", features = ["bundled"] }
